logs/Slang/generated/keywords/5.6.2--keyword_supply1.sv.log
name: keyword_supply1
description: The 'supply1' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_supply1.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_supply1.sv:8:8: error: expected declarator
    bit supply1;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_supply1.sv:8:16: error: expected declarator
    bit supply1;
               ^
